spring 集成 仍有错

--- a/ibluesea_uc/pom.xml
+++ b/ibluesea_uc/pom.xml
@@ -113,6 +113,11 @@
 			<artifactId>shiro-web</artifactId>
 			<version>${shiro.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring</artifactId>
+			<version>${shiro.version}</version>
+		</dependency>		
 
 		<!-- log4j -->
 		<dependency>
